--- a/src/app/scss/_helpers.scss
+++ b/src/app/scss/_helpers.scss
@@ -18,6 +18,13 @@
   font-weight: 700;
 }
 
+.link-white {
+  color: $brand-white;
+  &:hover, &:active, &:focus {
+    color: $brand-white;
+  }
+}
+
 .text-gray {
   color: #8c8c8c;
 }
@@ -28,6 +35,10 @@
 
 .text-xl {
   font-size: 1.2em;
+}
+
+.text-2xl {
+  font-size: 1.4em;
 }
 
 .mt-0 {
@@ -74,6 +85,10 @@
   padding-left: 0;
 }
 
+.pl-x {
+  padding-left: 5px;
+}
+
 .nowrap {
   white-space: nowrap;
 }
@@ -116,6 +131,10 @@
 
 .d-inline-block {
   display: inline-block;
+}
+
+.list-style-none {
+  list-style: none;
 }
 
 *:focus {
