--- a/src/app/scss/_helpers.scss
+++ b/src/app/scss/_helpers.scss
@@ -59,6 +59,7 @@
 
 .mx {
   margin: 0 10px;
+}
 
 .text-2xl {
   font-size: 1.4em;
@@ -134,6 +135,7 @@
 
 .ml-0 {
   margin-left: 0;
+}
 
 .pl-x {
   padding-left: 5px;
