Add state parameters to admin page and add admin page to sitemap.

--- a/src/app/html/admin/main.html
+++ b/src/app/html/admin/main.html
@@ -1,18 +1,22 @@
 <div data-ng-controller="AdminController">
     <div class="row no-gutter m-b">
         <div class="col-xs-6 text-center">
-            <div class="justus-btn justus-btn-stage" data-ng-class="{selected: hakuState}"
-                 data-ng-click="hakuState=true">
+            <div class="justus-btn justus-btn-stage"
+                 data-ng-class="{selected: hakuState}"
+                 data-ng-click="hakuState=true"
+                 data-ui-sref="admin({tila:'haku'})">
                 <span data-ng-bind="i18n.admin.haku[lang]"></span>
             </div>
         </div>
         <div class="col-xs-6 text-center">
-            <div class="justus-btn justus-btn-stage" data-ng-class="{selected: !hakuState}"
-                 data-ng-click="hakuState=false">
+            <div class="justus-btn justus-btn-stage"
+                 data-ng-class="{selected: !hakuState}"
+                 data-ng-click="hakuState=false"
+                 data-ui-sref="admin({tila:'vienti'})">
                 <span data-ng-bind="i18n.admin.vie[lang]"></span>
             </div>
         </div>
     </div>
-    <div data-ng-if="hakuState" data-ng-include data-src="'html/admin/haku.html'"></div>
-    <div data-ng-if="!hakuState" data-ng-include data-src="'html/admin/vie.html'"></div>
+    <div data-ng-include data-src="'html/admin/haku.html'"></div>
+    <div data-ng-include data-src="'html/admin/vie.html'"></div>
 </div>
