--- a/src/app/scss/_helpers.scss
+++ b/src/app/scss/_helpers.scss
@@ -49,6 +49,10 @@
   margin-bottom: $padding-large-vertical;
 }
 
+.mb-0 {
+  margin-bottom: 0;
+}
+
 .mb-x {
   margin-bottom: $padding-small-vertical;
 }
