--- a/src/app/scss/components/_button.scss
+++ b/src/app/scss/components/_button.scss
@@ -110,7 +110,7 @@
   background-color: $brand-primary-light;
   display: inline-block;
   padding: 9px;
-  margin: 4px 0px;
+  margin: 4px 0;
   cursor: pointer;
   text-align: left;
   font-size: larger;
