Change contrasts to fill WCAG requirements.

--- a/src/app/html/tarkasta.html
+++ b/src/app/html/tarkasta.html
@@ -178,7 +178,7 @@
                 </span>
               </td>
               <td data-ng-show="state.name=='hyvaksy'" class="btn-col">
-                <div class="btn-group">
+                <div class="btn-group approve-btn">
                   <button data-ng-repeat="julkaisuntila in codes.julkaisuntila | orderBy: 'arvo' | limitTo:4"
                           title="{{julkaisuntila.selite}}"
                           class="btn btn-primary"
