--- a/src/app/scss/components/_table.scss
+++ b/src/app/scss/components/_table.scss
@@ -44,7 +44,7 @@
 .hover-table-green {
   &:hover {
     cursor: pointer;
-    background-color: $brand-primary-light !important;
+    background-color: $brand-primary !important;
     color: #fff;
     a {
       color: #fff;
