Improve responsive layout.

--- a/src/app/html/justus/tallennus.html
+++ b/src/app/html/justus/tallennus.html
@@ -347,7 +347,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-3">
+    <div class="col-md-3 margin-bottom-md">
       <button
               class="btn btn-lg btn-block btn-info"
               type="submit"
@@ -355,7 +355,7 @@
         Palaa muokkaamaan
       </button>
     </div>
-        <div class="col-md-3">
+        <div class="col-md-3 margin-bottom-md">
           <button
                   data-ng-controller="TallennusController"
                   class="btn btn-lg btn-block btn-danger"
