--- a/src/app/scss/components/_navigation.scss
+++ b/src/app/scss/components/_navigation.scss
@@ -11,6 +11,7 @@
     padding: 10px 30px;
     border-radius: $border-radius-base;
     margin-bottom: $padding-small-vertical;
+    letter-spacing: 1.8px;
 
     &:hover {
       background: $brand-primary-dark;
