--- a/src/app/html/admin/vie.html
+++ b/src/app/html/admin/vie.html
@@ -98,14 +98,14 @@
         </div>
 
         <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-8 col-xs-12 margin-bottom-md">
                 <button class="btn btn-lg btn-primary btn-block"
                         type="submit"
                         data-ng-click="saveCsvData()"
                         data-ng-bind="i18n.admin.content.lataus.tuo.tallenna[lang]">
                 </button>
             </div>
-            <div class="col-md-4 pull-right">
+            <div class="col-md-4 col-xs-12 pull-right">
                 <button class="btn btn-lg btn-danger btn-block"
                         type="button"
                         data-ng-click="discardChanges(csvData)"
