Add radio buttons and improve layout in enter publication stage.

--- a/src/app/scss/_helpers.scss
+++ b/src/app/scss/_helpers.scss
@@ -133,12 +133,23 @@
   background-color: #fff !important;
 }
 
+.bg-light-gray {
+  background: $bg-light-gray;
+}
+
 .d-inline-block {
   display: inline-block;
 }
 
 .list-style-none {
   list-style: none;
+}
+
+.no-underline {
+  &:hover {
+    text-decoration: none;
+  }
+
 }
 
 *:focus {
