--- a/src/app/html/header.html
+++ b/src/app/html/header.html
@@ -1,4 +1,4 @@
-<div class="row m-b">
+<div class="row m-b" id="topOfPage">
     <div class="col-xs-12 col-md-6">
         <div data-ng-if="state.name=='index'">
             <img src="img/justus2.png" alt="Justus logo" class="img-responsive">
