Remove redundant css class.

--- a/src/app/html/justus/julkaisunsyotto.html
+++ b/src/app/html/justus/julkaisunsyotto.html
@@ -5,7 +5,7 @@
     </h4>
 
     <div data-ng-show="showPublicationInput" class="m-b">
-        <div class="bg-light-gray p-1">
+        <div class="bg-light p-1">
             <label class="text-2xl font-weight-bold cursor-pointer" data-ng-model="selectedValue"
                    uib-btn-radio="'syotaJulkaisu'">
                 <input class="custom-radio" type="radio" data-ng-model="selectedValue" data-ng-value="'syotaJulkaisu'"/>
@@ -349,7 +349,7 @@
     </div>
 
     <div class="m-b">
-        <div class="bg-light-gray p-1">
+        <div class="bg-light p-1">
             <label data-ng-click="goToTop()" class="text-2xl font-weight-bold cursor-pointer"
                    data-ng-model="selectedValue" uib-btn-radio="'rinnakkaistallennettumuualle'">
                 <input class="custom-radio" type="radio" data-ng-model="selectedValue"
@@ -388,7 +388,7 @@
     </div>
 
     <div class="m-b">
-        <div class="bg-light-gray p-1">
+        <div class="bg-light p-1">
             <label data-ng-click="goToTop()" class="text-2xl font-weight-bold cursor-pointer"
                    data-ng-model="selectedValue" uib-btn-radio="'eirinnakkaistellennettava'">
                 <input class="custom-radio" type="radio" data-ng-model="selectedValue"
